# notice-api

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-redoc.yml
src/notice_api/: cors.py  db.py  dump_spec.py  generate.py  main.py  model.py  test1_langchain.ipynb
src/notice_api/api/v1/: v1_router.py
src/notice_api/auth/: db.py  deps.py  routes.py  schema.py  types.py
src/notice_api/bookshelves/: routes.py  schema.py
src/notice_api/core/: config.py
src/notice_api/note_completion/: generate.py  model.py
src/notice_api/notes/: deps.py  note_content.py  repository.py  routes.py  schema.py
src/notice_api/playback/: routes.py
src/notice_api/transcript/: audio_saver.py  routes.py  schema.py  transcript_saver.py
src/notice_api/utils/logging/: core.py  middlewares.py
